edx-platform/edxapp-espol/lms/static/sass/_overrides.scss
/*=====================================================
  Name = espol theme
  Author = @edunext | Miguel López - @Icemberth
  Description
  --------------------------------
  overrides for common elements: [header, footer, etc]
========================================================*/
$main-color: #001c43;
$hover-color: #1f457b;
$secondary-color: #eaa932;
$screen-sm-max: 600px;

.btn-default{
  box-sizing: border-box !important;
  transition: color 0.25s ease-in-out,background 0.25s ease-in-out,box-shadow 0.25s ease-in-out !important;
  display: inline-block !important;
  cursor: pointer;
  text-decoration: none;
  border: none !important;
  padding: 10px 20px !important;
  text-align: center !important;
  text-shadow: none;
  letter-spacing: 0 !important;
  box-shadow: 0 2px 1px 0 $secondary-color !important;
  background: $main-color !important;
  color: white !important;
}
a{
  color: $main-color;
}
h1 {
  font-size: 1.5rem;
}
.page-heading {
  padding: 30px 10px 10px 10px;
}
// .header-global .nav-courseware li{
//   @media (max-width: $screen-sm-max) {
//     padding: 10px !important;
//     background: red !important;
//   }
// }


.header-global .nav-courseware li .btn{
  box-shadow: 0 2px 1px 0 $secondary-color;
  background: $main-color;
}
.header-global .nav-courseware li .btn:hover{
  background: $hover-color;
}
body header.header-global .logo img{
  height: 30px;
}
.footer-about-openedx{
  @media (max-width: $screen-sm-max) {
    margin-top: 10px;
  }
}
.footer-about-openedx p{
  margin: 0 0 0 0 !important;
  text-align: right;
}
.footer-about-openedx a {
  display: block !important;
  float: none !important;
}
.wrapper-footer{
  background: #5B5B5F;

  footer#footer-openedx .copyright{
    color: white;
  }
  footer#footer-openedx ul a{
    color: white;
  }
  footer#footer-openedx a:hover{
    border-bottom: 1px dotted white;
  }
  .social-feed {
    display: flex;
    width: 100%;
    flex-flow: row wrap;
    align-content: space-between;
    justify-content: flex-end;
    margin-top: 15%;

    @media (max-width: $screen-sm-max) {
      display: flex;
      width: 100%;
      align-content: space-between;
      justify-content: center;
      margin-top: 15%;
      text-align: center;
    }

    a{
      color: white !important;
      font-size: 1.6rem;
      width: 15%;
      cursor: pointer;
    }

    a:hover{
      color: #878788 !important;
    }
  }
}

.home > header .title .course-search .search-button{
  border: 2px solid $main-color;
  background: $main-color;
  box-shadow: none;
}

#global-navigation{
  border-bottom: 2px solid $main-color;
}
.header-global{
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.1);
  background: #fff;
  position: relative;
  width: 100%;
  // TODO: be careful with this rule, can affect more than 1 thing that you thing.
  height: 76px !important;

  .wrapper-header {
    @media (max-width: $screen-sm-max) {
      height: auto !important;
      padding-top: 5px;
    }
  }
  .logo-header {
  }
  @media (max-width: $screen-sm-max) {
    text-align: center;
  }
  .nav-courseware{
    @media (max-width: $screen-sm-max) {
      width: 100%;
      margin-top: 45px;
      display: block;
      margin-bottom: 20px;
    }
  }
}

.header-global .nav-courseware li .btn{
  @media (max-width: $screen-sm-max) {
    font-size: .7em;
  }
}
.header-global .wrapper-header .wrapper-user-menu {
  margin-top: 4px !important;
}
.header-global.slim .wrapper-header .list-inline.nav-global{
  margin-top: 16px !important;

  @media (max-width: $screen-sm-max) {
    padding-left: 31px;
  }
}
.header-global .wrapper-header .logo{
  @media (max-width: $screen-sm-max) {
    position: absolute;
    top: -8px;
  }
}
.header-global .wrapper-header .course-header {
  max-width: 50%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 15px;
  // TODO: be careful with this rule, can affect more than 1 thing that you thing.
  margin-top: 16px !important;
}
.wrapper-footer footer#footer-openedx p{
  @media (max-width: $screen-sm-max) {
    text-align: center;
  }
}
.heading-group button{
  display: none;
}
// Login CSS
.login-register .action-primary{
  background: $main-color;
  box-shadow: 0 2px 1px 0 $secondary-color;

  &:hover{
    background: $hover-color;
  }
}
.login-register-content h2{
  color: $main-color;
}
.login-register .form-field .field-link {
  color: $main-color;
}
// Curses
.courses-container .courses .course {
  border-bottom: 3px solid $main-color;
}
.courses-container .courses .course .course-image .cover-image .learn-more {
  border-color: $main-color;
  background: $main-color;
}
.courses-container .courses .course .course-info .course-title {
  color: $main-color;
}

.course-info .container{
  @media(max-width: $screen-sm-max) {
    width:100%;
    min-width: initial;
  }
}
.course-info .details{
  @media (max-width: $screen-sm-max) {
    width: 100%;
  }
}
.course-info .course-sidebar{
  @media (max-width: $screen-sm-max) {
    width: 100%;
  }
}
.course-info .heading-group{
  text-align: left;
}
.course-info header.course-profile .intro-inner-wrapper{
  max-width: none !important;
  min-width: initial !important;
}
.course-info .register {
  @extend .btn-default;

  @media (max-width: $screen-sm-max) {
    width: 100% !important;
    display: block !important;
    margin-top: 5px;
  }

  width: 45% !important;
  text-transform: capitalize !important;
}
.course-info header.course-profile .intro-inner-wrapper .intro{
  @media(max-width: $screen-sm-max) {
    display: block !important;
    width: 100%;
  }
}
.course-info header.course-profile .intro-inner-wrapper .media{
  @media(max-width: $screen-sm-max) {
    display: block !important;
    width: 100%;
  }
}
.course-info header.course-profile .intro-inner-wrapper .intro .main-cta strong{
  @extend .btn-default;

  @media (max-width: $screen-sm-max) {
    width: 100% !important;
    display: block !important;
    margin-top: 5px;
  }

  width: 45% !important;
  text-transform: capitalize !important;
  font-size: 16px;
  padding-top: 5px !important;
  height: 36px;
}
.action-show-bookmarks {
  text-align: left;
}
div.info-wrapper section.handouts a{
  text-align: left;
  color: $main-color;
}
div.info-wrapper section.handouts ol li a{
  color: $main-color;
}
// dashboard
a, a:visited{
  color: $main-color;
}
.header-global .nav-global li a{
  color: $main-color
}
.dashboard .my-courses .course .details .enter-course{
  color: $main-color;
  border-color: $main-color;

  &:hover{
    background-color: $main-color;
    color: #FFF !important
  }
}
.find-courses .filters .clear-filters{
  color: $main-color;
}
.find-courses .search-facets .facet-option:hover{
  background: $main-color;
}
.find-courses .discovery-input:focus{
  border-color: $main-color;
}
.find-courses .discovery-submit{
  border: solid 2px $main-color;
  background: $main-color;

  &:hover{
    background: $hover-color;
  }
}
.search-bar .search-button{
  background: $main-color;
  &:hover{
    background: $hover-color;
  }
}
/* ========================================================
  Name = espol theme
  Author = @edunext | Daniel Naranjo - @Bound3R
  Web = edunext.co
  Description
  -------------------------------------------------------
  overrides for common elemnts: [header, footer etc]
======================================================== */
// header arrangements to imitate lms v2 (pattern library)
body header.header-global,
body header.header-global.slim {
  height: auto;
  padding: 0;
  border-bottom: 1px solid #a1a5a5;

  .wrapper-header {
    height: 40px;
    padding: 18px 10px 0;

  }

  .logo img {
    // height: 30px;
    margin-top: 4px;
  }




  .dropdown-menu-container .menu-button {
    text-shadow: none;
    box-shadow: none;

    &:hover,
    &:active,
    &:focus {
      background: none;
    }
  }
}

.home > header {
  background-color: #006699;
  background: url("../images/hero-home-page.jpg") center center;
  background-size: cover;
}

// dashboard wrapper backgrounds
body .content-wrapper {
  background: $transparent !important;
}

body.index .content-wrapper {
  max-width: none;
}

.dashboard {
  margin-top: 40px;
  padding: 20px 20px 0;
}


// couseware wrapper alignmed
body.view-in-course .container {
  padding: 0;

  div.home,
  div.info-wrapper {
    border: none;
    padding: 20px;
  }

  .home {
    border-bottom: 1px solid #d9d9d9;
    max-width: 100%;
  }
}

// course about
.course-info header {
  height: auto !important;
  margin-bottom: 40px;
  padding: 40px !important;
}
.course-info .container {
  padding: 40px 20px;
}

.course-info .course-sidebar header::after {
  left: 0;
}

